syntax = "proto3";
package verity.persistence.boltdb.v1;

option go_package = "github.com/dogmatiq/verity/persistence/boltpersistence/internal/pb";

// AggregateMetaData is a protocol buffers representation of
// persistence.AggregateMetaData.
message AggregateMetaData{
  uint64 revision = 1;
  bool instance_exists = 2;
  string last_event_id = 3;
  string barrier_event_id = 4;
}

// AggregateSnapshot is a protocol buffers representation of
// persistence.AggregateSnapshot.
message AggregateSnapshot{
  string version = 1;
  string media_type = 2;
  bytes data = 3;
}
